--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@ class: center, middle, inverse
 
 ---
 
+# Prerequisites...
+
+- Some experience with [R programming language](https://cran.r-project.org/).
+
+- Some background knolwedge in [Pandoc Markdown](https://pandoc.org/MANUAL.html).
+
+---
+
 # About Me
 
 - Blind person (one of my identities).
@@ -485,7 +493,7 @@ penguins %&gt;%
 
 # Next Steps
 
-- Data Accessibilization: Multi-modal interactive data viz.
+- [MAIDR: Multimodal Access and Interactive Data Representation](https://uiuc-ischool-accessible-computing-lab.github.io/MAIDR/).
 
 - Funded by the Wallace Foundation and ISLS.
 
