--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ class: center, middle, inverse
 
 - Some experience with [R programming language](https://cran.r-project.org/).
 
-- Some background knolwedge in [Pandoc Markdown](https://pandoc.org/MANUAL.html).
+- Some background knowledge in [Pandoc Markdown](https://pandoc.org/MANUAL.html).
 
 ---
 
