update week12-02 slides

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="libs/remark-css/fc.css" rel="stylesheet" />
     <link href="libs/remark-css/fc-fonts.css" rel="stylesheet" />
     <link href="libs/remark-css/hygge.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
     <script src="libs/tone/Tone.js"></script>
@@ -52,20 +52,6 @@ class: center, middle, inverse
 - Some experience with [R programming language](https://cran.r-project.org/).
 
 - Some background knowledge in [Pandoc Markdown](https://pandoc.org/MANUAL.html).
-
----
-
-# About Me
-
-- Blind person (one of my identities).
-
-- Assistant professor at the UIUC iSchool + NCSA affiliate.
-
-- RStudio DS education partner.
-
-- Open-source contributor + R developer: {rmarkdown}, {shiny}, {bookdown}, {distill}, {rticles} ...
-
-- Certified a11y professional.
 
 ---
 
